--- a/src/app/pages/bienvenida/bienvenida.component.html
+++ b/src/app/pages/bienvenida/bienvenida.component.html
@@ -5,17 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>About Me Profile card || Learning Robo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="app.component.css">
+    <link rel="stylesheet" href="bienvenida.component.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   </head>
   <body>
-        <nav class="navbar">
-        <a routerLink="/bienvenida">Bienvenida</a>
-        <a routerLink="/login">Login</a>
-        <a routerLink="/registro">Registro</a>
-        <a routerLink="/sobre-mi">Sobre Mi</a>
-        </nav>
+    <div class="about-wrapper">
 
-    </body>
+      
+      <div class="about-left">
+          <div class = "about-left-content">
+              <div class = "about-para">
+                  <p>AQUI USTED TENDRA LA BIENVENIDA</p>
+              </div>
+          </div>
+      </div>
+      <div class="about-right">
+        <div class="about-right-content">
+          <h1>Hola<span>!</span></h1>
+        </div>
+      </div>
+    
 
-<router-outlet></router-outlet>
+    </div>
+</body>
+</html>
