primer/segundo sprint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
   <body>
         <nav class="navbar">
         <a routerLink="/bienvenida">Bienvenida</a>
-        <a routerLink="/login">Login</a>
-        <a routerLink="/registro">Registro</a>
+        <!-- <a routerLink="/login">Login</a>
+        <a routerLink="/registro">Registro</a> -->
         <a routerLink="/sobre-mi">Sobre Mi</a>
         </nav>
 
