--- a/src/app/pages/bienvenida/bienvenida.component.html
+++ b/src/app/pages/bienvenida/bienvenida.component.html
@@ -21,11 +21,24 @@
       </div>
       <div class="about-right">
         <div class="about-right-content">
-          <h1>Hola<span>!</span></h1>
+          @if (this.authService.user()!== null){
+            <h1>Bienvenido<span>!</span></h1><br>
+            <h4>{{this.authService.user()!.email}}</h4><br>
+            <button  class="btn btn-white" (click)="cerrarSesion()">cerrar sesion</button>
+          } @else {
+            <h1>Hola<span>!</span></h1><br>
+            <div class="about-btns">
+              <button class="btn btn-white" routerLink="/registro">registrarse</button>
+              <button class="btn btn-white" routerLink="/login">iniciar sesion</button> 
+            </div>
+          }
         </div>
       </div>
+
+      
     
 
     </div>
 </body>
 </html>
+<router-outlet></router-outlet>
