--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -16,67 +16,114 @@
           
         <div class = "about-left-content">
           <div>
-              <form [formGroup]="formulario" class="needs-validation">
-                <div class="mb-3 about-para">
-                  <label for="nombre">Nombre</label>
-                  <input type="text" class="form-control" formControlName="nombre" />
-                  @if (nombre?.errors !== null && nombre?.touched) {
-                    <div class="text-danger mt-1">
-                      @if (nombre?.hasError('required')) {
-                        <p>El nombre es requerido</p>
-                      }
-                      @if (nombre?.hasError('minlength')) {
-                        <p>El nombre requiere al menos 3 caracteres</p>
-                      }
-                      @if (nombre?.hasError('maxlength')) {
-                        <p>El nombre debe tener como máximo 15 caracteres</p>
-                      }
-                    </div>
-                  }
-                </div>
+            <form [formGroup]="formulario" class="needs-validation">
 
-                <div class="mb-3 about-para">
-                  <label for="apellido">Apellido</label>
-                  <input type="text" class="form-control" formControlName="apellido" />
-                  @if (apellido?.errors !== null && apellido?.touched) {
-                    <div class="text-danger mt-1">
-                      @if (apellido?.hasError('required')) {
-                        <p>El apellido es requerido</p>
-                      }
-                      @if (apellido?.hasError('minlength')) {
-                        <p>El apellido requiere {{ apellido?.getError('minlength').requiredLength }} caracteres</p>
-                      }
-                      @if (apellido?.hasError('maxlength')) {
-                        <p>El apellido debe tener como máximo {{ apellido?.getError('maxlength').requiredLength }} caracteres</p>
-                      }
-                    </div>
-                  }
-                </div>
-
-                <div class="mb-3 about-para">
-                  <label for="edad">Edad</label>
-                  <input type="number" class="form-control" formControlName="edad" />
-                  @if (edad?.errors !== null && edad?.touched) {
-                    <div class="text-danger mt-1">
-                      @if (edad?.hasError('required')) {
-                        <p>La edad es requerida</p>
-                      }
-                      @if (edad?.hasError('min')) {
-                        <p>Debes ser mayor de edad</p>
-                      }
-                      @if (edad?.hasError('max')) {
-                        <p>Debes tener menos de 40 años</p>
-                      }
-                    </div>
-                  }
-                </div>
-
-                <div class="about-btns">
-                  <button (click)="mostrarFormulario()" class="btn btn-white">Mostrar</button>
-                  <button (click)="validarFormulario()" class="btn btn-white">Validar</button>
-                  <button (click)="guardarDatos()" [disabled]="!formulario.valid" class="btn btn-pink">Guardar</button>
-                </div>
-              </form>
+              <!-- Nombre -->
+              <div class="mb-3 about-para">
+                <label for="nombre">Nombre</label>
+                <input type="text" class="form-control" formControlName="nombre" />
+                @if (nombre?.errors !== null && nombre?.touched) {
+                  <div class="text-danger mt-1">
+                    @if (nombre?.errors?.['required']) {
+                      <p>El nombre es requerido</p>
+                    }
+                    @if (nombre?.errors?.['minlength']) {
+                      <p>El nombre requiere al menos 3 caracteres</p>
+                    }
+                    @if (nombre?.errors?.['maxlength']) {
+                      <p>El nombre debe tener como máximo 15 caracteres</p>
+                    }
+                  </div>
+                }
+              </div>
+            
+              <!-- Apellido -->
+              <div class="mb-3 about-para">
+                <label for="apellido">Apellido</label>
+                <input type="text" class="form-control" formControlName="apellido" />
+                @if (apellido?.errors !== null && apellido?.touched) {
+                  <div class="text-danger mt-1">
+                    @if (apellido?.errors?.['required']) {
+                      <p>El apellido es requerido</p>
+                    }
+                    @if (apellido?.errors?.['minlength']) {
+                      <p>El apellido requiere al menos {{ apellido?.errors?.['minlength']?.requiredLength }} caracteres</p>
+                    }
+                    @if (apellido?.errors?.['maxlength']) {
+                      <p>El apellido debe tener como máximo {{ apellido?.errors?.['maxlength']?.requiredLength }} caracteres</p>
+                    }
+                  </div>
+                }
+              </div>
+            
+              <!-- Edad -->
+              <div class="mb-3 about-para">
+                <label for="edad">Edad</label>
+                <input type="number" class="form-control" formControlName="edad" />
+                @if (edad?.errors !== null && edad?.touched) {
+                  <div class="text-danger mt-1">
+                    @if (edad?.errors?.['required']) {
+                      <p>La edad es requerida</p>
+                    }
+                    @if (edad?.errors?.['min']) {
+                      <p>Debes ser mayor de edad</p>
+                    }
+                    @if (edad?.errors?.['max']) {
+                      <p>Debes tener menos de 80 años</p>
+                    }
+                  </div>
+                }
+              </div>
+            
+              <!-- Mail -->
+              <div class="mb-3 about-para">
+                <label for="mail">E-mail</label>
+                <input type="text" class="form-control" formControlName="mail" />
+                @if (mail?.errors !== null && mail?.touched) {
+                  <div class="text-danger mt-1">
+                    @if (mail?.errors?.['required']) {
+                      <p>El mail es requerido</p>
+                    }
+                    @if (mail?.errors?.['minlength']) {
+                      <p>El mail requiere al menos {{ mail?.errors?.['minlength']?.requiredLength }} caracteres</p>
+                    }
+                    @if (mail?.errors?.['maxlength']) {
+                      <p>El mail debe tener como máximo {{ mail?.errors?.['maxlength']?.requiredLength }} caracteres</p>
+                    }
+                    @if (mail?.errors?.['email']) {
+                      <p>El mail debe tener formato válido</p>
+                    }
+                  </div>
+                }
+              </div>
+            
+              <!-- Password -->
+              <div class="mb-3 about-para">
+                <label for="password">Password</label>
+                <input type="text" class="form-control" formControlName="password" />
+                @if (password?.errors !== null && password?.touched) {
+                  <div class="text-danger mt-1">
+                    @if (password?.errors?.['required']) {
+                      <p>El password es requerido</p>
+                    }
+                    @if (password?.errors?.['minlength']) {
+                      <p>El password requiere al menos {{ password?.errors?.['minlength']?.requiredLength }} caracteres</p>
+                    }
+                    @if (password?.errors?.['maxlength']) {
+                      <p>El password debe tener como máximo {{ password?.errors?.['maxlength']?.requiredLength }} caracteres</p>
+                    }
+                  </div>
+                }
+              </div>
+            
+              <!-- Botón -->
+              <div class="about-btns">
+                <button (click)="guardarDatos()" [disabled]="!formulario.valid" class="btn btn-pink">Registrarme</button>
+              </div>
+            
+            </form>
+            
+            
           </div>
         </div>
         
@@ -86,14 +133,14 @@
       <div class="about-right">
         <div class="about-right-content">
           <h1>Registro<span>!</span></h1>
-        </div>
       </div>
 
 
 
     </div>
-  </body>
-</html>
 
 
 
+
+
+<router-outlet></router-outlet>
