terminando el 3er sprint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   </head>
   <body>
-        <nav class="navbar">
+        <!-- <nav class="navbar">
         <a routerLink="/bienvenida">Bienvenida</a>
-        <!-- <a routerLink="/login">Login</a>
-        <a routerLink="/registro">Registro</a> -->
         <a routerLink="/sobre-mi">Sobre Mi</a>
+        </nav> -->
+        <nav class="navbar">
+          <div class="navbar-left">
+            <p>Sala de juegos</p>
+          </div>
+          <div class="navbar-right">
+            <a routerLink="/bienvenida">Bienvenida</a>
+            <a routerLink="/sobre-mi">Sobre Mí</a>
+          </div>
         </nav>
-
     </body>
 
 <router-outlet></router-outlet>
