--- a/src/app/pages/sobre-mi/sobre-mi.component.css
+++ b/src/app/pages/sobre-mi/sobre-mi.component.css
@@ -1,189 +1,110 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    font-family: 'Poppins', sans-serif;
-}
-.about-wrapper{
-    height: 100vh;
-}
-.about-left{
-    background-color: #21D4FD;
-    background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    color:#fff
-}
-.about-left-content > div{
-    background: #12192c;
-    padding: 4rem 4rem 2.5rem 5rem;
-    text-align: center;
-    
-    border-radius: 12px 12px 0 0;
-}
-.about-left-content{
-    box-shadow: 0px 0px 18px -1px rgba(0, 0, 0, 0.39);
-    -webkit-box-shadow: 0px 0px 18px -1px rgba(0, 0, 0, 0.39);
-    -moz-box-shadow: 0px 0px 18px -1px rgba(0, 0, 0, 0.39);
-    border-radius: 12px;
-    width:80%;
-}
-.about-img img{
-    display: block;
-    width: 200px;
-}
-.about-img{
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 50%;
-    transition: all 0.5s ease-in-out;
-}
-.shadow{
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
+body {
+  font-family: "Poppins", sans-serif;
+  background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
 }
 
-
-
-.about-left-content h2{
-    font-size: 2rem;
-    margin: 2.2rem 0 0.6rem 0;
-    line-height: 1.2;
-    padding-bottom: 1rem;
-    border-bottom: 2px solid #B721FF;
-}
-.about-left-content h3{
-    text-transform: uppercase;
-    font-weight: 300;
-    letter-spacing: 5px;
-    margin-top: 1.2rem;
-}
-.icons{
-    background: #12192c;
-    display: flex;
-    justify-content: center;
-    padding: 0.8rem 0;
-    border-radius: 0 0 12px 12px;
-}
-.icons li{
-    list-style-type: none;
-    background: #B721FF;
-    color: #fff;
-    width: 40px;
-    height: 40px;
-    margin: 0 0.5rem;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-}
-.icons li:hover{
-    background: #edffec;
-    color: #000;
-}
-.about-right{
-    background: #12192c;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0 5rem;
-    text-align: center;
-    color:#fff
-}
-.about-right h1{
-    font-size: 5rem;
-    text-transform: uppercase;
-}
-.about-right h1 span{
-    color: #B721FF;
-}
-.about-right h2{
-    font-weight: 600;
-}
-.about-btns{
-    display: flex;
-    margin: 2rem 0;
-}
-.btn{
-    border: none;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    border: 2px solid #fff;
-    border-radius: 20px;
-    padding: 0.55rem 0;
-    width: 130px;
-    font-weight: 600;
-    background: transparent;
-    margin: 0 0.5rem;
-    cursor: pointer;
-    color:#fff
-}
-.btn.btn-pink{
-    background: #B721FF;
-    color: #fff;
-    border-color: #B721FF;
-    transition: all 0.5s ease-in-out;
-}
-.btn.btn-pink:hover{
-    background: transparent;
-    border-color: #fff;
-    color: #fff;
-}
-.btn.btn-white{
-    transition: all 0.5s ease-in-out;
-}
-.btn.btn-white:hover{
-    background: #B721FF;
-    border-color: #B721FF;
-    color: #fff;
-}
-.about-para p{
-    font-weight: 300;
-    padding: 0.5rem;
-    opacity: 0.8;
+.about-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  width: 90%;
+  background: #fff;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-@media screen and (min-width: 992px){
-    .about-wrapper{
-        display: grid;
-        grid-template-columns: repeat(2, 2fr);
-    }
-
-    .about-left{
-        position: relative;
-    }
-    .about-left-content{
-        position: absolute;
-        width:80%
-    
-    }
+.about-left,
+.about-right {
+  flex: 1 1 300px;
+  padding: 40px;
 }
-.credit{
-    text-align: center;
-    color: #fff;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+.about-left {
+  background: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.credit a{
-    text-decoration: none;
-    color:#B721FF;
-    font-weight: bold;
-} 
 
+.about-left-content {
+  text-align: center;
+}
 
+.shadow {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  margin: 0 auto 20px;
+}
+
+.about-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-left-content h2 {
+  margin: 10px 0 5px;
+  font-size: 24px;
+  font-weight: 600;
+  color: #333;
+}
+
+.about-left-content h3 {
+  font-size: 18px;
+  font-weight: 400;
+  color: #666;
+}
+
+.about-right h1 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.about-right h1 span {
+  color: #6b73ff;
+}
+
+.about-right h2 {
+  font-size: 24px;
+  font-weight: 500;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.about-btns {
+  margin-bottom: 20px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 25px;
+  font-size: 16px;
+  border: 2px solid #6b73ff;
+  color: #6b73ff;
+  border-radius: 25px;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.btn:hover {
+  background: #6b73ff;
+  color: #fff;
+}
+
+.about-para p {
+  font-size: 16px;
+  color: #555;
+  line-height: 1.6;
+}
