3er sprint finished

--- a/src/app/pages/ahorcado/ahorcado.component.html
+++ b/src/app/pages/ahorcado/ahorcado.component.html
@@ -31,7 +31,8 @@
         }
         @if (juegoGanado || juegoPerdido){
 
-            <button (click)="resetearJuego()">Reiniciar juego</button>
+            <button (click)="empezarJuego()">Reiniciar juego</button>
+
         }
     
     </div>
