chat/mayormenor arreglados y page resultados

--- a/src/app/pages/bienvenida/bienvenida.component.html
+++ b/src/app/pages/bienvenida/bienvenida.component.html
@@ -28,19 +28,19 @@
     </div>
     <div class="cards">
       <button class="card" type="button" routerLink="/ahorcado">
-        <h2>Ahorcado</h2>
+        <h2>Ahorcado!</h2>
         
       </button>
       <button class="card" type="button" routerLink="/mayor-menor">
-        <h2>Mayor-Menor</h2>
+        <h2>Mayor-Menor!</h2>
         
       </button>
       <button class="card" type="button" routerLink="/preguntados">
-        <h2>Preguntados</h2>
+        <h2>Preguntados!</h2>
         
       </button>
-      <button class="card" type="button" routerLink="/bienvenida">
-        <h2>Juego Propio</h2>
+      <button class="card" type="button" routerLink="/adivina-numero">
+        <h2>Adivina el Número!</h2>
         
       </button>
     </div>
