--- a/src/app/pages/preguntados/preguntados.component.html
+++ b/src/app/pages/preguntados/preguntados.component.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>About Me Profile card || Learning Robo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="preguntados.component.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="preguntados.component.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous"/>
   </head>
   <body>
     <div class="container">
-        <h1>Preguntados</h1>
+      <h1>Preguntados</h1>
+      <div class="opciones">
+        <div class="opciones">
+          <button routerLink="conocimiento-general">Ir a Conocimiento General</button>
+          <button routerLink="deportes">Ir a Deportes</button>
+          <button routerLink="historia">Ir a Historia</button>
+          <button routerLink="geografia">Ir a Geografía</button>
+        </div>
       </div>
-      
+    </div>
   </body>
+  </html>
+  <router-outlet></router-outlet>
+  
