--- a/src/app/pages/sobre-mi/sobre-mi.component.html
+++ b/src/app/pages/sobre-mi/sobre-mi.component.html
@@ -39,6 +39,10 @@
                 <div class = "about-para">
                     <p>{{this.githubService.datosCliente().bio}}</p>
                 </div>
+                <div class = "about-para">
+                    <h2>Descripcion de mi Juego: </h2>
+                    <p>El juego que programe es Adivina el número. El jugador tiene que adivinar un número del 1 al 20 que se genera al azar. Tiene 5 intentos para adivinar, después de cada intento se informa si el número que se introdujo es muy alto o muy bajo. El juego termina si lo adivina o si se queda sin intentos.</p>
+                </div>
             </div>
 
         </div>
