--- a/src/app/pages/mayor-menor/mayor-menor.component.html
+++ b/src/app/pages/mayor-menor/mayor-menor.component.html
@@ -1,36 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>About Me Profile card || Learning Robo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="mayor-menor.component.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="mayor-menor.component.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="container">
-        <div>
-          <h2>Juego Mayor o Menor</h2>
-          <p>Carta actual: {{ cartaActual }}</p>
-        
-          <div class="opciones">
-            <button (click)="elegir('mayor')" [disabled]="juegoTerminado">Mayor</button>
-            <button (click)="elegir('menor')" [disabled]="juegoTerminado">Menor</button>
-          </div>
-        
-          <p>{{ mensaje }}</p>
-        
-          <p>Aciertos: {{ aciertos }}</p>
-          <p>Errores: {{ errores }}</p>
-        
-          
-          
-          @if (juegoTerminado) {
-            <button (click)="empezarJuego()">Reiniciar</button>
-            <p>{{ mensajeFinal }}</p>
-            }
-        </div>        
-        </div>        
-      
+      <div>
+        <h2>Juego Mayor o Menor</h2>
+
+        <div class="carta-naipes">
+          <div class="esquina top-left">{{ cartaActual }}</div>
+          <div class="centro">♥</div>
+          <div class="esquina bottom-right">{{ cartaActual }}</div>
+        </div>
+
+        <div class="opciones">
+          <button (click)="elegir('mayor')" [disabled]="juegoTerminado">
+            Mayor
+          </button>
+          <button (click)="elegir('menor')" [disabled]="juegoTerminado">
+            Menor
+          </button>
+        </div>
+
+        <p>{{ mensaje }}</p>
+
+        <p>Aciertos: {{ aciertos }}</p>
+        <p>Errores: {{ errores }}</p>
+
+        @if (juegoTerminado) {
+        <button (click)="empezarJuego()">Reiniciar</button>
+        <p>{{ mensajeFinal }}</p>
+        }
+      </div>
+    </div>
   </body>
+</html>
